adding links to socials in the footer

--- a/index.html
+++ b/index.html
@@ -11,4 +11,25 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
+  <footer>
+    <div class="social-links">
+      <a href="https://www.linkedin.com/in/gupta-armaan/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/dev-Armaan" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://medium.com/@armaang" target="_blank">
+        <i class="fa-brands fa-medium"></i>
+      </a>
+      <a href="https://drive.google.com/file/d/1u4JhIVWkh6-alj9uETQRs5CBIMRDHJ-4/view?usp=sharing" target="_blank">
+        <i class="fa-solid fa-file"></i>
+      </a>
+      <a href="mailto:armaan.dev06@gmail.com" target="_blank">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+  </footer>
+
 </html>
