--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="https://www.linkedin.com/in/gupta-armaan/" target="_blank">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="./src/assets/resume.pdf" target="_blank">
+      <a href="/resume.pdf"  target="_blank">
         <i class="fa-solid fa-file"></i>
       </a>
       <a href="https://github.com/dev-Armaan" target="_blank">
@@ -30,7 +30,7 @@
       <a href="https://www.linkedin.com/in/gupta-armaan/" target="_blank">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="./src/assets/resume.pdf" target="_blank">
+      <a href="/resume.pdf" target="_blank">
         <i class="fa-solid fa-file"></i>
       </a>
       <a href="https://github.com/dev-Armaan" target="_blank">
